# Dungeon-Crawl

./: .commit_notes.txt.swp  .gitignore  AGENTS.md  CHANGELOG.md  README.md  abilities.py  actions.py  battle.py  character.py  classes.py  combat.py  combat_result.py  companions.py  display.py  enemies.py  game.py  game_curses.py  game_pygame.py  items.py  launch.sh  map.py  map_level_1.txt  map_tiles.py  movement.py  player.py  pygame_game.py  pyproject.toml  races.py  requirements.txt  save_system.py  spells.py  storyline.py  town.py  tutorial.py  utils.py  world.py
.github/: copilot-instructions.md
analytics/: combat_simulator.py
ascii_files/: alligator.txt  ankheg.txt  antlion.txt  archvile.txt  assassin.txt  barghest.txt  bat.txt  battletoad.txt  behemoth.txt  beholder.txt  braingorger.txt  centipede.txt  cerberus.txt  chimera.txt  clannfear.txt  cockatrice.txt  cyborg.txt  darkknight.txt  devil.txt  direbear.txt  direwolf.txt  disciple.txt  displacerbeast.txt  domingo.txt  dragonkin.txt  dwarf.txt  fighter.txt  fuath.txt  gargoyle.txt  ghoul.txt  giantowl.txt  giantrat.txt  giantscorpion.txt  gnoll.txt  goblin.txt  goldeneagle.txt  golem.txt  griffin.txt  harpy.txt  hornet.txt  (+34 more)
assets/: sprite_manager.py
chapters/: chapter1.ch
combat/: __init__.py  enhanced_manager.py
data/: ability_loader.py
docs/: ANIMATION_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  COMBAT_ANIMATIONS_SUMMARY.md  COMBAT_SPRITE_ANIMATIONS.md  DEVELOPMENT_ROADMAP.md  EFFECTS_INTEGRATION_DESIGN.md  EVENT_EMISSIONS.md  FORESIGHT_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  NEW_SYSTEMS.md  PHASE_2.md  PRE_PHASE_3_CLEANUP.md  PRIORITY_ACTION_IMPLEMENTATION.md  PRIORITY_ACTION_WEIGHTING.md  PROMOTION_ABILITY_RULES.md  QUICK_TEST_GUIDE.md  README.md  SHOP_GUI_UPDATE.md  SOUND_SYSTEM.md  SPRITE_IMPROVEMENTS_SUMMARY.md  SPRITE_RENDERING_IMPROVEMENTS.md  TEST_SUMMARY.md
dungeon_crawl.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
effects/: base.py  buffs.py
events/: __init__.py  event_bus.py
gui/: GUI_README.md  barracks.py  character_screen.py  church.py  class_selection.py  combat_manager.py  combat_view.py  confirmation_popup.py  dungeon_hud.py  dungeon_manager.py  enhanced_dungeon_renderer.py  inn.py  level_up.py  level_up_popup.py  load_game.py  (+13 more)
(+428 files in other folders)
